welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:10: error: '=>' expected but integer literal found.
    case <=2 => droite()
           ^Poucet:11: error: '=>' expected but integer literal found.
    case >=3 => gauche()
           ^